person in .net framework

--- a/WebApplication1/Views/People/Delete.cshtml
+++ b/WebApplication1/Views/People/Delete.cshtml
@@ -1,5 +1,5 @@
-﻿@using Person.Repositories
-@model Person.Models.People
+﻿
+@model WebApplication1.Models.People
 
 @{
     ViewData["Title"] = "Delete";
