--- a/WebApplication1/Views/People/Edit.cshtml
+++ b/WebApplication1/Views/People/Edit.cshtml
@@ -1,6 +1,6 @@
-﻿@using Person.Repositories
+﻿
 
-@model Person.Models.People
+@model WebApplication1.Models.People
 
 @{
     ViewData["Title"] = "Edit";
