--- a/WebApplication1/Views/People/Index.cshtml
+++ b/WebApplication1/Views/People/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@using cloudscribe.Web.Pagination
-@using Person.Controllers
+@using WebApplication1.Controllers
 @using cloudscribe.Pagination.Models
-@using Person.Models
-@using Person.Repositories
+@using WebApplication1.Models
+@using WebApplication1.Repository.IRepository
 
 @model PagedResult<People>;
 
