--- a/WebApplication1/Views/People/SearchPeople.cshtml
+++ b/WebApplication1/Views/People/SearchPeople.cshtml
@@ -1,5 +1,5 @@
-﻿@using Person.Controllers
-@model IEnumerable<Person.Models.People>
+﻿@using WebApplication1.Controllers
+@model IEnumerable<WebApplication1.Models.People>
 
 <h2>Search Results</h2>
 
