--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -41,12 +41,12 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Person - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - Person - <a asp-area="" asp-controller="People" asp-action="Index">eople</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+    @await Html.RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
